vlib/v/checker/tests/array_insert_val_err.out
vlib/v/checker/tests/array_insert_val_err.vv:3:16: error: cannot use `[]int` as `[][2]int` in argument 2 to `[][2]int.insert`
    1 | fn main() {
    2 |     mut arr := [][2]int{}
    3 |     arr.insert(0, [1, 2])
      |                   ~~~~~~
    4 |     arr.insert(0, [1, 2]!)
    5 |     arr.prepend([1, 2])
vlib/v/checker/tests/array_insert_val_err.vv:5:14: error: cannot use `[]int` as `[][2]int` in argument 1 to `[][2]int.prepend`
    3 |     arr.insert(0, [1, 2])
    4 |     arr.insert(0, [1, 2]!)
    5 |     arr.prepend([1, 2])
      |                 ~~~~~~
    6 |     arr.prepend([1, 2]!)
    7 |     println(arr)
